modules/sdk/sdk_proc/tests/02-not-or-bad-struct.rs


#[sdk_proc::module]
enum EnumModule {

}

#[sdk_proc::module]
struct UnitStructModule;

fn main() {}